Closed
Bug 484033
Opened 16 years ago
Closed 16 years ago
extend nsICrashReporter to allow crashreporter to be used without going through XRE_Main
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: ted, Assigned: ted)
References
Details
(Whiteboard: [Would want this on 1.9.1: see comment 6])
Attachments
(1 file)
|
10.12 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
It would be nice to be able to get stack traces from xpcshell tests when they crash (bug 483062). xpcshell can't currently use the crashreporter code because the only way to initialize it is either to startup through XRE_Main, or to call it from C++. I've added a few things to nsICrashReporter to make it usable from xpcshell.
| Assignee | ||
Comment 1•16 years ago
|
||
Needs a pass through the try server, but works fine on my mac. This extends nsICrashReporter, adding the following properties:
.enabled
.serverURL
.minidumpPath
It also adds an xpcshell test (yay!) I'll probably build on this and add a test that actually forces a crash and checks the dump later.
| Assignee | ||
Comment 2•16 years ago
|
||
Comment on attachment 368074 [details] [diff] [review]
extend nsICrashReporter
Passes the try server.
Attachment #368074 -
Flags: review?(benjamin)
Comment 3•16 years ago
|
||
Comment on attachment 368074 [details] [diff] [review]
extend nsICrashReporter
Do you want to sanity-check the URL at all, to force it to be HTTP for example?
Attachment #368074 -
Flags: review?(benjamin) → review+
| Assignee | ||
Comment 4•16 years ago
|
||
Yeah, I'll fix that. I also realized that this test might fail on --disable-libxul builds that have crash reporting enabled, since they won't be able to get the crashreporter service, so I'll tweak the test to accomodate.
| Assignee | ||
Comment 5•16 years ago
|
||
Pushed to m-c:
http://hg.mozilla.org/mozilla-central/rev/8e464707cf5b
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Target Milestone: --- → mozilla1.9.2a1
| Assignee | ||
Comment 6•16 years ago
|
||
I'd like to take this on 1.9.1 to enable bug 483062, but I guess I'll have to move the interface changes to a new branch-only interface. Should be feasible, although we should sort out bug 488596 first.
Depends on: 488596
Updated•16 years ago
|
Flags: in-testsuite+
Whiteboard: [Would want this on 1.9.1: see comment 6]
You need to log in
before you can comment on or make changes to this bug.
Description
•