bug 484033 -  extend nsICrashReporter to allow crashreporter to be used without going through XRE_Main. r=bsmedberg